--- a/app/src/main/res/layout/activity_singleplayer_game.xml
+++ b/app/src/main/res/layout/activity_singleplayer_game.xml
@@ -21,38 +21,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/questionField"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/gameField"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_margin="25dp"
-        android:textColor="@android:color/white"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_text_category"
-        android:background="@color/ButtonBackground"
-        />
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <Button
-        android:id="@+id/trueButton"
-        android:text="Sant"
-        android:background="@drawable/button_shape"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/questionField"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/falseButton"/>
+        <TextView
+            android:id="@+id/questionField"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_margin="8dp"
+            android:paddingHorizontal="16dp"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            android:text="Zlatan spelar hockey"
+            android:gravity="center_vertical"
+            android:textAlignment="center"
+            app:layout_constraintLeft_toLeftOf="@+id/gameField"
+            app:layout_constraintRight_toRightOf="@+id/gameField"
+            app:layout_constraintTop_toTopOf="@+id/gameField"
+            app:layout_constraintBottom_toTopOf="@+id/trueButton"
+            android:background="@color/ButtonBackground"
+            />
 
-    <Button
-        android:id="@+id/falseButton"
-        android:text="Falskt"
-        android:background="@drawable/button_shape"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/questionField"
-        app:layout_constraintLeft_toRightOf="@+id/trueButton"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <Button
+            android:id="@+id/trueButton"
+            android:text="Sant"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:background="@drawable/button_shape"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/questionField"
+            app:layout_constraintLeft_toLeftOf="@+id/gameField"
+            app:layout_constraintRight_toLeftOf="@+id/falseButton"/>
+
+        <Button
+            android:id="@+id/falseButton"
+            android:text="Falskt"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:background="@drawable/button_shape"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/questionField"
+            app:layout_constraintLeft_toRightOf="@+id/trueButton"
+            app:layout_constraintRight_toRightOf="@+id/gameField"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
