Created a database with highscore table and categories table. Added some default data

--- a/app/src/main/res/layout/dropdown_list_item.xml
+++ b/app/src/main/res/layout/dropdown_list_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="49dp"
-        android:background="#fe8787"
+        android:background="#FEA3A3"
         android:gravity="center_vertical"
         android:textAlignment="center"
         android:textSize="24sp"
