--- a/app/src/main/res/layout/activity_handle_questions.xml
+++ b/app/src/main/res/layout/activity_handle_questions.xml
@@ -24,8 +24,8 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="wrap_content"
-        android:layout_height="450dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -33,7 +33,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_text"></ListView>
+        app:layout_constraintTop_toBottomOf="@+id/top_text"/>
 
     <TextView
         android:id="@+id/top_text"
