--- a/app/src/main/res/layout/activity_singleplayer_game.xml
+++ b/app/src/main/res/layout/activity_singleplayer_game.xml
@@ -23,21 +23,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/point_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="@font/lobster_two_bold"
+        android:text="@string/points"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/gameField"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/points"/>
+
+    <TextView
         android:id="@+id/points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:fontFamily="@font/lobster_two_bold"
         android:text="11"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/gameField"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.007"
-        app:layout_constraintStart_toEndOf="@+id/point_text" />
+        app:layout_constraintLeft_toRightOf="@+id/point_text"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/gameField"
@@ -93,18 +103,5 @@
             app:layout_constraintTop_toBottomOf="@+id/questionField" />
 
     </android.support.constraint.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/point_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginStart="128dp"
-        android:fontFamily="@font/lobster_two_bold"
-        android:text="@string/points"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/gameField"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
