--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -7,15 +7,83 @@
     android:background="@drawable/main_background"
     tools:context="case2.iths.com.QuizGame.CreateQuestionActivity">
 
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/gameField_add_question"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/button_add_question"
+        app:layout_constraintTop_toBottomOf="@+id/category_text">
+
+        <TextView
+            android:id="@+id/questionField_add_question"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_margin="8dp"
+            android:background="@color/ButtonBackground"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="16dp"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/button_add_true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="skriv text här, välj vilket svarsalternativ som ska vara rätt" />
+
+        <Button
+            android:id="@+id/button_add_true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/button_shape"
+            android:onClick="trueButtonPressed"
+            android:text="Sant"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="@+id/gameField_add_question"
+            app:layout_constraintRight_toLeftOf="@+id/button_add_false"
+            app:layout_constraintTop_toBottomOf="@+id/questionField_add_question" />
+
+        <Button
+            android:id="@+id/button_add_false"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/button_shape"
+            android:onClick="falseButtonPressed"
+            android:text="Falskt"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toRightOf="@+id/button_add_true"
+            app:layout_constraintRight_toRightOf="@+id/gameField_add_question"
+            app:layout_constraintTop_toBottomOf="@+id/questionField_add_question" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/button_add_question"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:background="@color/ButtonBackground"
+        android:onClick="categoryButtonPressed"
+        android:text="@string/add"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="475dp" />
+
     <TextView
         android:id="@+id/top_text_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Create Question"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/lobster_two_bold"
+        android:text="Create Question"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -25,35 +93,33 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/category"
-        android:hint="some kind of category chooser"
+        android:id="@+id/category_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:hint="spinner to choose category"
+        android:textAlignment="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_text_create"/>
+        app:layout_constraintTop_toBottomOf="@+id/top_text_create" />
 
     <EditText
-        android:id="@+id/question"
+        android:id="@+id/question_text"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
         android:hint="Type the question here"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category"/>
+        app:layout_constraintTop_toBottomOf="@+id/category_text" />
 
     <EditText
-        android:id="@+id/answer"
+        android:id="@+id/answer_text"
         android:layout_width="0dp"
-        android:hint="Type the answer here"
         android:layout_height="wrap_content"
+        android:hint="Type the answer here"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question"/>
+        app:layout_constraintTop_toBottomOf="@+id/question_text" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="done"
-        app:layout_constraintTop_toBottomOf="@+id/answer"/>
 </android.support.constraint.ConstraintLayout>
