--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -36,7 +36,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/goToProfileButton"
+        android:id="@+id/button_profile"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/top_text" />
 
     <ImageButton
-        android:id="@+id/toggleSoundImageButton"
+        android:id="@+id/imagebutton_mute"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginTop="15dp"
@@ -62,20 +62,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goToProfileButton"
+        app:layout_constraintTop_toBottomOf="@+id/button_profile"
         app:srcCompat="@drawable/muted_sound" />
-
-    <Button
-        android:id="@+id/button_testSound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="testSoundButton"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/developed_by_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggleSoundImageButton" />
 
 
 </android.support.constraint.ConstraintLayout>
