--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -11,8 +11,9 @@
         android:id="@+id/gameField_add_question"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toTopOf="@+id/button_add_question"
-        app:layout_constraintTop_toBottomOf="@+id/category_text">
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAddCategory">
 
         <TextView
             android:id="@+id/questionField_add_question"
@@ -38,7 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
-            android:onClick="trueButtonPressed"
             android:text="Sant"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -52,7 +52,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
-            android:onClick="falseButtonPressed"
             android:text="Falskt"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -66,14 +65,16 @@
         android:id="@+id/button_add_question"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:background="@color/ButtonBackground"
-        android:onClick="categoryButtonPressed"
         android:text="@string/add"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="475dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/top_text_create"
@@ -98,6 +99,7 @@
         android:layout_height="wrap_content"
         android:hint="spinner to choose category"
         android:textAlignment="center"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_text_create" />
@@ -121,5 +123,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question_text" />
+
+    <Spinner
+        android:id="@+id/spinnerAddCategory"
+        android:layout_width="344dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@null"
+        android:spinnerMode="dialog"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/answer_text" />
 
 </android.support.constraint.ConstraintLayout>
