--- a/app/src/main/res/drawable/pressed_button_shape.xml
+++ b/app/src/main/res/drawable/pressed_button_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/ButtonBackground" />
+    <solid android:color="@color/PressedButtonBackground" />
 
     <corners android:radius="20dp"/>
     <padding
@@ -10,5 +10,4 @@
         android:left="10dp"
         android:right="10dp"
         android:top="5dp"/>
-
 </shape>
