--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -73,26 +73,31 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="skriv text här, välj vilket svarsalternativ som ska vara rätt" />
 
-        <Button
+        <ToggleButton
             android:id="@+id/button_add_true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
+            android:checked="false"
             android:text="sant"
+            android:textOff="Sant"
+            android:textOn="Sant"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/gameField_add_question"
             app:layout_constraintRight_toLeftOf="@+id/button_add_false"
             app:layout_constraintTop_toBottomOf="@+id/editText_add_question" />
 
-        <Button
+        <ToggleButton
             android:id="@+id/button_add_false"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
             android:text="falskt"
+            android:textOff="Falskt"
+            android:textOn="Falskt"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/button_add_true"
