--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#fe8787</color>
     <color name="colorAccent">#4fc11550</color>
     <color name="ButtonBackground">#2b543a53</color>
+    <color name="PressedButtonBackground">#ce543a53</color>
 </resources>
