Buttons change color correctly in CreateQuestionsActivity

--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -84,6 +84,7 @@
             android:checked="false"
             android:text="sant"
             android:textOff="Sant"
+            android:onClick="onButtonTrueClicked"
             android:textOn="Sant"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -98,6 +99,7 @@
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
             android:text="falskt"
+            android:onClick="onButtonFalseClicked"
             android:textOff="Falskt"
             android:textOn="Falskt"
             android:textSize="20sp"
