crateQuestions id fix

--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -68,7 +68,7 @@
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/button_add_true"
+            app:layout_constraintBottom_toTopOf="@+id/togglebutton_add_true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             tools:text="skriv text här, välj vilket svarsalternativ som ska vara rätt" />
 
         <ToggleButton
-            android:id="@+id/button_add_true"
+            android:id="@+id/togglebutton_add_true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -89,11 +89,11 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@+id/gameField_add_question"
-            app:layout_constraintRight_toLeftOf="@+id/button_add_false"
+            app:layout_constraintRight_toLeftOf="@+id/togglebutton_add_false"
             app:layout_constraintTop_toBottomOf="@+id/editText_add_question" />
 
         <ToggleButton
-            android:id="@+id/button_add_false"
+            android:id="@+id/togglebutton_add_false"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -104,7 +104,7 @@
             android:textOn="Falskt"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@+id/button_add_true"
+            app:layout_constraintLeft_toRightOf="@+id/togglebutton_add_true"
             app:layout_constraintRight_toRightOf="@+id/gameField_add_question"
             app:layout_constraintTop_toBottomOf="@+id/editText_add_question" />
 
