--- a/app/src/main/res/layout/activity_handle_questions.xml
+++ b/app/src/main/res/layout/activity_handle_questions.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context="case2.iths.com.QuizGame.HandleQuestionsActivity">
+    tools:context="case2.iths.com.QuizGame.HandleStatementsActivity">
 
     <Button
         android:id="@+id/button_add"
